--- a/package.json
+++ b/package.json
@@ -17,26 +17,14 @@
   "license": "MIT",
   "repository": "git://github.com/wpdas/near-social-local-viewer.git",
   "dependencies": {
-    "@monaco-editor/react": "^4.4.6",
-    "@near-wallet-selector/core": "^7.9.0",
-    "@near-wallet-selector/here-wallet": "^7.9.0",
-    "@near-wallet-selector/meteor-wallet": "^7.9.0",
-    "@near-wallet-selector/modal-ui": "^7.9.0",
-    "@near-wallet-selector/my-near-wallet": "^7.9.0",
-    "@near-wallet-selector/near-wallet": "^7.9.0",
-    "@near-wallet-selector/neth": "^7.9.0",
-    "@near-wallet-selector/sender": "^7.9.0",
-    "big.js": "^6.1.1",
-    "bn.js": "^5.1.1",
-    "bootstrap": "^5.2.1",
-    "bootstrap-icons": "^1.9.0",
     "collections": "^5.1.12",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "error-polyfill": "^0.1.2",
     "local-storage": "^2.0.0",
     "near-api-js": "^0.45.1",
-    "near-social-vm": "git+https://github.com/NearSocial/VM.git#1.1.0",
+    "near-social-vm": "workspace:*",
+    "gateway": "workspace:*",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
